--- a/build.gradle
+++ b/build.gradle
@@ -5,21 +5,13 @@ plugins {
     id 'com.jfrog.bintray' version '1.8.4'
 }
 
-group = 'pw.aru.hungergames'
+group = 'pw.aru.hg'
 version = '1.0'
 
-// Minified Splash
-({ String l, String v ->
-    def d = "$l ${(v.size() + l.size() + 1) % 2 != 0 ? "-" : "--"} v$v"
-    def w = (0..(30 - d.size() / 2)).collect { it % 2 != 0 ? '-' : '=' }.join ''
-    println "|$w| $d |${w.reverse()}|"
-})("Aru HG-Tuples Library", version)
-
 sourceCompatibility = 1.8
-targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -28,12 +20,12 @@ dependencies {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 
@@ -67,10 +59,11 @@ bintray {
     key = bintrayApiKey
     publications = ['BintrayRelease']
     pkg {
-        repo = 'maven'
+        repo = 'hg'
         name = project.name
+        userOrg = 'arudiscord'
         licenses = ['Apache-2.0']
-        vcsUrl = 'https://github.com/arubot/hg-tuples.git'
+        vcsUrl = 'https://github.com/arudiscord/hg-tuples.git'
         publish = true
         version {
             name = project.version
@@ -80,5 +73,5 @@ bintray {
 
 bintrayUpload {
     dependsOn build
-    dependsOn 'publishBintrayReleasePublicationToMavenLocal'
+    dependsOn publishToMavenLocal
 }
